<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeLogic.HomepageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:background="#990000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="USC Village"
        app:titleTextColor="#ffff"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/toolbar"
        tools:context=".HomeLogic.HomepageActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/map"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/routeto"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/store"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/store_list"
                android:minHeight="48dp" />

        </LinearLayout>


            <Button
                android:id="@+id/display_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="buttonClick"
                android:text="@string/route" />

        <TextView
            android:id="@+id/routingdisplay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/accountPage"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:text="@string/accountPage"
                android:textSize="20sp"
                android:gravity="center"
                android:onClick="goToAccountPage"
                />

            <Button
                android:id="@+id/reminder"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                app:title="Reminders"
                android:text="@string/reminders"
                android:textSize="20sp"
                android:gravity="center"
                android:onClick="goToReminders" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>

