...
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:text="SIGN IN"
        android:textColor="#FFFFFF"
        app:backgroundTint="#990000"
        app:layout_constraintBottom_toTopOf="@+id/failButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ProgressBar
...
